--- a/fuse2/PKGBUILD
+++ b/fuse2/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=fuse2
 pkgver=2.9.9
-pkgrel=4.1
+pkgrel=4.2
 pkgdesc="A library that makes it possible to implement a filesystem in a userspace program."
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/libfuse/libfuse'
@@ -37,7 +37,7 @@ prepare() {
 build() {
   cd fuse-$pkgver
 
-  UDEV_RULES_PATH=/usr/lib/udev/rules.d MOUNT_FUSE_PATH=/usr/bin ./configure --prefix=/usr --libdir=/usr/lib --enable-lib --enable-util --disable-example
+  ./configure UDEV_RULES_PATH=/usr/lib/udev/rules.d MOUNT_FUSE_PATH=/usr/bin --prefix=/usr --libdir=/usr/lib --enable-lib --enable-util --disable-example
   make
 }
 
