--- a/perl/perl/PKGBUILD
+++ b/perl/perl/PKGBUILD
@@ -8,7 +8,7 @@
 pkgname=perl
 pkgver=5.34.0
 _baseversion="${pkgver%.*}"
-pkgrel=2
+pkgrel=3
 pkgdesc="A highly capable, feature-rich programming language"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL' 'PerlArtistic')
@@ -143,7 +143,7 @@ source=(https://www.cpan.org/src/5.0/perl-${pkgver}.tar.xz
 options=('makeflags' '!purge' 'emptydirs')
 sha512sums=('691b4b31eacec357191fba777612b4e3eae59e946a22998a50766697c0d61db1d42a9b3bc1e41abf0d1ca1893e4a7c06d7bf3290480cf03d7f79befd7a8a3267'
             '58f99cfdc762270a41d85afe37239e9a9837142254e8c83bcd67386fabd71f60ede4a02b2b06e4afade7d5452e54f696b4640b76f48f8ec5599e8637b4fbedeb'
-            'f36fb536b2a4610c68803cf8ec8d821207a64b38268786195e2174feb09b535129c10220eb2ce8fa54b74d9863c316d8c9c7a2597dc3a62f00ea4b55f2f3cc83'
+            '1c924b5bf7413d097f62638a574d7decf36d98598b84cdb5fb31ff633b6f953371e14b004a2558a1a0b74b6b60b90b481af0f68555a49208fe6b226381fed79f'
             '6ed5bc6dbdc47bc7f4c0fedbe18deaf35ab02a2e6700988beb545954bb1d0fe20ff1a4de39d6d9fc882ef1741f7bf6d85ba165d0cd8dc0d9939b789c894f48a1'
             '53eb0cddfd637014f3d3a101665db8dcafe5ac5bf3d319a259974334eb89c1c405097518ae96b6d18e520194633c7be57c9b2cd9ae6398443eb08f1a2008d112'
             '881e2efe05ba818cd7300f126800b56bb0685cb5c9c5fb7e67ef6aaf5abd17d2391a979d5d16d109c5111f4b35504ba83d19b0e6eda4431e8421fcbea19d2f1a'
@@ -155,6 +155,9 @@ prepare() {
   cd "${srcdir}/${pkgname}-${pkgver}"
 
   patch -p1 -i "$srcdir/perl-18924.patch"
+
+  # reproducible patchlevel_date
+  [ -n "${SOURCE_DATE_EPOCH}" ] && touch -h -d @$SOURCE_DATE_EPOCH patchlevel.h
 }
 
 build() {
