--- a/libcap/PKGBUILD
+++ b/libcap/PKGBUILD
@@ -5,20 +5,20 @@
 # Contributor: Hugo Doria <hugo@archlinux.org>
 
 pkgname=libcap
-pkgver=2.60
+pkgver=2.62
 pkgrel=1
-pkgdesc='POSIX 1003.1e capabilities'
+pkgdesc="POSIX 1003.1e capabilities"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://sites.google.com/site/fullycapable/"
-license=('GPL2')
-depends=('glibc') # 'pam')
-makedepends=('linux-api-headers')
-provides=('libcap.so' 'libpsx.so')
+license=(GPL2)
+depends=(glibc pam)
+makedepends=(linux-api-headers)
+provides=(libcap.so libpsx.so)
 source=("https://kernel.org/pub/linux/libs/security/linux-privs/${pkgname}2/${pkgname}-$pkgver.tar."{xz,sign}
 )
-sha512sums=('f2ff0d81df7251c05decda706ccc6463ce58df6a3c542fe479328dce5416f77aa5c6a09a1ab05a1d1a3638e6dae5c0e546aaa4824843a570700a8927fb7f73e6'
+sha512sums=('61ac004920c5cd3382a5443db2eacfc2041b7a8c0814b27084c1d111125639fe3950dea4325d0f7fb6bfb0d5de114452c3a62230cc958edb05ffdb83b213f9b3'
             'SKIP')
-b2sums=('858b5133a5cb2f3b30dab569a6c9f2097034318c90419fa2372e0b28c891160f5e84b54b302b2d98664df8f7c44df78eb3cb4e47b328cecd4c27e7ab223045ae'
+b2sums=('e3c86a5b88b9be932802ec8612f79e5f04912bf3e66f673eae2add85362292f4737c544d21b9e5adfd1a7a33c073568301b6532cdf0ea6c8b834d895b84323f1'
         'SKIP')
 validpgpkeys=(38A644698C69787344E954CE29EE848AE2CCF3F4) # Andrew G. Morgan <morgan@kernel.org>
 
@@ -37,6 +37,5 @@ package() {
   make DESTDIR="$pkgdir" RAISE_SETFCAP='no' lib='lib' prefix='/usr' sbindir='bin' install
   # docs
   install -vDm 644 {CHANGELOG,README} -t "${pkgdir}/usr/share/doc/${pkgname}/"
-  install -vDm 644 pam_cap/capability.conf \
-    -t "$pkgdir/usr/share/doc/$pkgname/examples/"
+  install -vDm 644 pam_cap/capability.conf -t "$pkgdir/usr/share/doc/$pkgname/examples/"
 }
