--- a/popt/PKGBUILD
+++ b/popt/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=popt
 pkgver=1.18
-pkgrel=1
+pkgrel=2
 pkgdesc="A commandline option parser"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/rpm-software-management/popt"
@@ -15,7 +15,8 @@ sha256sums=('5159bc03a20b28ce363aa96765f37df99ea4d8850b1ece17d1e6ad5c24fdc5d1')
 
 build() {
   cd "${pkgname}-${pkgver}"
-  ./configure --prefix=/usr
+  # Avoid stripping issue
+  CFLAGS+=" -ffat-lto-objects" ./configure --prefix=/usr
   make
 }
 
