--- a/argon2/PKGBUILD
+++ b/argon2/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=argon2
 pkgver=20190702
-pkgrel=3
+pkgrel=4
 pkgdesc='A password-hashing function (reference C implementation)'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/P-H-C/phc-winner-argon2'
@@ -16,19 +16,19 @@ sha256sums=('daf972a89577f8772602bf2eb38b6a3dd3d922bf5724d45e7f9589b5e830442c')
 build() {
   cd "$srcdir/phc-winner-$pkgname-$pkgver"
 
-  make OPTTARGET='none' LIBRARY_REL='lib'
+  make ARGON2_VERSION="${pkgver}" OPTTARGET='none' LIBRARY_REL='lib'
 }
 
 check() {
   cd "$srcdir/phc-winner-$pkgname-$pkgver"
 
-  make OPTTARGET='none' LIBRARY_REL='lib' test
+  make ARGON2_VERSION="${pkgver}" OPTTARGET='none' LIBRARY_REL='lib' test
 }
 
 package() {
   cd "$srcdir/phc-winner-$pkgname-$pkgver"
 
-  make OPTTARGET='none' LIBRARY_REL='lib' DESTDIR="$pkgdir" install
+  make ARGON2_VERSION="${pkgver}" OPTTARGET='none' LIBRARY_REL='lib' DESTDIR="$pkgdir" install
 
   install -D -m0644 LICENSE "${pkgdir}/usr/share/licenses/argon2/LICENSE"
 }
