--- a/libmicrohttpd/PKGBUILD
+++ b/libmicrohttpd/PKGBUILD
@@ -6,11 +6,11 @@
 # Contributor: Mathias Rohnstock <linksoft@gmx.de>
 
 pkgname=libmicrohttpd
-pkgver=0.9.73
+pkgver=0.9.75
 pkgrel=1
-pkgdesc="a small C library that is supposed to make it easy to run an HTTP server as part of another application."
+pkgdesc='a small C library that is supposed to make it easy to run an HTTP server as part of another application.'
 arch=(x86_64 powerpc64le powerpc riscv64)
-url="https://www.gnu.org/software/libmicrohttpd/"
+url='https://www.gnu.org/software/libmicrohttpd/'
 license=('LGPL')
 depends=('gnutls')
 checkdepends=('curl')
@@ -18,11 +18,12 @@ provides=('libmicrohttpd.so')
 validpgpkeys=('EA812DBEFA5A7EF17DA8F2C1460A317C3326D2AE'  # Evgeny Grin (Karlson2k) <k2k@yandex.ru>
               'D8423BCB326C7907033929C7939E6BE1E29FC3CC') # Christian Grothoff <christian.grothoff@bfh.ch>
 source=("https://ftp.gnu.org/gnu/libmicrohttpd/$pkgname-$pkgver.tar.gz"{,.sig})
-sha256sums=('a37b2f1b88fd1bfe74109586be463a434d34e773530fc2a74364cfcf734c032e'
+sha256sums=('9278907a6f571b391aab9644fd646a5108ed97311ec66f6359cebbedb0a4e3bb'
             'SKIP')
 
 build() {
   cd ${pkgname}-${pkgver}
+
   ./configure \
     --prefix=/usr \
     --disable-dependency-tracking \
@@ -37,10 +38,12 @@ build() {
 
 check() {
   cd ${pkgname}-${pkgver}
+
   make check
 }
 
 package() {
   cd ${pkgname}-${pkgver}
+
   make DESTDIR="$pkgdir" install
 }
