--- a/cmake/PKGBUILD
+++ b/cmake/PKGBUILD
@@ -4,35 +4,30 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=cmake
-pkgver=3.21.4
-pkgrel=1
+pkgver=3.22.1
+pkgrel=5
 pkgdesc='A cross-platform open-source make system'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.cmake.org/"
 license=('custom')
 depends=('curl' 'libarchive' 'hicolor-icon-theme' 'jsoncpp' 'libjsoncpp.so' 'libuv' 'rhash')
-#makedepends=('qt6-base' 'python-sphinx' 'emacs')
-makedepends=('python-sphinx')
+makedepends=('qt6-base' 'python-sphinx')
+makedepends_powerpc=('emacs')
+makedepends_powerpc64le=('emacs')
 optdepends=('qt6-base: cmake-gui')
-source=("https://www.cmake.org/files/v${pkgver%.*}/${pkgname}-${pkgver}.tar.gz"
-         cmake-cppflags.patch)
-sha512sums=('0262a666f6da106576c26215580c40b54497bcdac400e847e1799716c31c71068293e719416338132a7da6122826c08ff50ac23dfed2711ab42631e96303f544'
-            '407c5c63a31266e44641ada8229dbc33df44df98e5bb575db3a33590e8ffdff9aea3f2ee5cb0cb855858facf1e46c63886dea9f948a0cad2da042e7f7f258cac')
-
-prepare() {
-  cd ${pkgname}-${pkgver}
-  patch -p1 -i ../cmake-cppflags.patch # Honor CPPFLAGS https://gitlab.kitware.com/cmake/cmake/issues/12928
-}
+source=("https://www.cmake.org/files/v${pkgver%.*}/${pkgname}-${pkgver}.tar.gz")
+sha512sums=('b1e900fe573cd1cc76d26386f2298d7722737c9ff67930ee108994972b4561ef69caeb537177c9b95b7f17b755e20e034825d3807ea0d2dd4c391310b03adc11')
 
 build() {
   cd ${pkgname}-${pkgver}
-  export CXXFLAGS+=" ${CPPFLAGS}"
   ./bootstrap --prefix=/usr \
     --mandir=/share/man \
     --docdir=/share/doc/cmake \
+    --datadir=/share/cmake \
     --sphinx-man \
+    --sphinx-html \
     --system-libs \
-    --no-qt-gui \
+    --qt-gui \
     --parallel=$(/usr/bin/getconf _NPROCESSORS_ONLN)
   make
 }
@@ -41,11 +36,10 @@ package() {
   cd ${pkgname}-${pkgver}
   make DESTDIR="${pkgdir}" install
 
+  rm -r "$pkgdir"/usr/share/doc/cmake/html/_sources
   # this won't work on 32bit
-  #[ ! "${CARCH}" = 'powerpc' ] && \
-  #emacs -batch -f batch-byte-compile \
-  #  "${pkgdir}"/usr/share/emacs/site-lisp/cmake-mode.el
-
-  install -Dm644 Copyright.txt \
-    "${pkgdir}"/usr/share/licenses/${pkgname}/LICENSE
+  [ ! "${CARCH}" = 'powerpc' -a ! "${CARCH}" = 'riscv64' ] && \
+    emacs -batch -f batch-byte-compile \
+    "${pkgdir}"/usr/share/emacs/site-lisp/cmake-mode.el
+  install -Dm644 Copyright.txt "${pkgdir}"/usr/share/licenses/${pkgname}/LICENSE
 }
