--- a/systemd/PKGBUILD
+++ b/systemd/PKGBUILD
@@ -5,10 +5,10 @@
 
 pkgbase=systemd
 pkgname=('systemd' 'systemd-libs' 'systemd-resolvconf' 'systemd-sysvcompat')
-_tag='620928e8026166a00d31142f0b38ba8b8e498cc4' # git rev-parse v${_tag_name}
-_tag_name=249.6
+_tag='4572cdce239cea0762b37d38005863f30b89b76a' # git rev-parse v${_tag_name}
+_tag_name=250.1
 pkgver="${_tag_name/-/}"
-pkgrel=3
+pkgrel=1
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.github.com/systemd/systemd'
 makedepends=('acl' 'cryptsetup' 'docbook-xsl' 'gperf' 'lz4' 'xz' 'pam' 'libelf'
@@ -27,7 +27,6 @@ validpgpkeys=('63CDA1E5D3FC22B998D20DD6327F26951A015CC4'  # Lennart Poettering <
 source=("git+https://github.com/systemd/systemd-stable#tag=${_tag}?signed"
         "git+https://github.com/systemd/systemd#tag=v${_tag_name%.*}?signed"
         '0001-Use-Arch-Linux-device-access-groups.patch'
-        '0003-PARTIAL-REVERT-commit-tree-wide-replace-strverscmp-and-str_verscmp-with-strverscmp_improved.patch'
         'initcpio-hook-udev'
         'initcpio-install-systemd'
         'initcpio-install-udev'
@@ -47,11 +46,10 @@ source=("git+https://github.com/systemd/systemd-stable#tag=${_tag}?signed"
         '30-systemd-update.hook')
 sha512sums=('SKIP'
             'SKIP'
-            '10f3b477527ec263cc6465c84d94416e356435930edc9e26844a0fd4f71e87a27fa0f91ce24b43a22cacdd2ead5e760e9d607369bc537a8da8d34021302a89a1'
-            '34541f1967536524329867f9f341f8d9250d9d771c60dc3e6a22ccb82fc01f103cfd3f9903329777591ccbecd2446622a5d6b3804fa0411482b85c70593ee8ad'
+            'cc0c2ffb5f7c3a7176cd68f3dddd85ca000dcc4cdf3044746a20147234adb6811800fd28a4713faa6a59bf8c02be9fd43c2d6aa6695fd1dbf03ae773a91d090c'
             'f0d933e8c6064ed830dec54049b0a01e27be87203208f6ae982f10fb4eddc7258cb2919d594cbfb9a33e74c3510cfd682f3416ba8e804387ab87d1a217eb4b73'
-            'f599e1a35cba2c4e83e37c2299fac23ae128d8f68081283e71e1729384975dee1c4b677787f31a17890aeb98c8d2fc90405a202644290708ef9c027315022b17'
-            'a25b28af2e8c516c3a2eec4e64b8c7f70c21f974af4a955a4a9d45fd3e3ff0d2a98b4419fe425d47152d5acae77d64e69d8d014a7209524b75a81b0edb10bf3a'
+            '5479c8ef963ff247381392907c13308b4ae3a9383c867bd4c8a318b159f23acdb4be5f4ddae0dab4665f4927d3f30166077b1d3aaa2cde6bf53d023b7abb939c'
+            'a8c7e4a2cc9c9987e3c957a1fc3afe8281f2281fffd2e890913dcf00cf704024fb80d86cb75f9314b99b0e03bac275b22de93307bfc226d8be9435497e95b7e6'
             '61032d29241b74a0f28446f8cf1be0e8ec46d0847a61dadb2a4f096e8686d5f57fe5c72bcf386003f6520bc4b5856c32d63bf3efe7eb0bc0deefc9f68159e648'
             'c416e2121df83067376bcaacb58c05b01990f4614ad9de657d74b6da3efa441af251d13bf21e3f0f71ddcb4c9ea658b81da3d915667dc5c309c87ec32a1cb5a5'
             '5a1d78b5170da5abe3d18fdf9f2c3a4d78f15ba7d1ee9ec2708c4c9c2e28973469bc19386f70b3cf32ffafbe4fcc4303e5ebbd6d5187a1df3314ae0965b25e75'
@@ -68,8 +66,6 @@ sha512sums=('SKIP'
             '825b9dd0167c072ba62cabe0677e7cd20f2b4b850328022540f122689d8b25315005fa98ce867cf6e7460b2b26df16b88bb3b5c9ebf721746dce4e2271af7b97')
 
 _backports=(
-  # scope: count successful cgroup additions when delegating via D-Bus
-  'c65417a01121301fdf7f8514ee7663d287af3a72'
 )
 
 _reverts=(
@@ -93,10 +89,6 @@ prepare() {
 
   # Replace cdrom/dialout/tape groups with optical/uucp/storage
   patch -Np1 -i ../0001-Use-Arch-Linux-device-access-groups.patch
-
-  # https://bugs.archlinux.org/task/70264
-  # https://github.com/systemd/systemd/issues/19191
-  patch -Np1 -i ../0003-PARTIAL-REVERT-commit-tree-wide-replace-strverscmp-and-str_verscmp-with-strverscmp_improved.patch
 }
 
 build() {
@@ -107,18 +99,13 @@ build() {
     #  * Cloudflare (https://1.1.1.1/)
     #  * Quad9 without filtering (https://www.quad9.net/)
     #  * Google (https://developers.google.com/speed/public-dns/)
-    1.1.1.1
-    9.9.9.10
-    8.8.8.8
-    2606:4700:4700::1111
-    2620:fe::10
-    2001:4860:4860::8888
+    1.1.1.1#cloudflare-dns.com
+    9.9.9.10#dns.quad9.net
+    8.8.8.8#dns.google
+    2606:4700:4700::1111#cloudflare-dns.com
+    2620:fe::10#dns.quad9.net
+    2001:4860:4860::8888#dns.google
   )
-
-  case "${CARCH}" in
-    x86_64) EFI=true ;;
-    *) EFI=false ;;
-  esac
 
   local _meson_options=(
     # internal version comparison is incompatible with pacman:
@@ -126,13 +113,6 @@ build() {
     -Dversion-tag="${_tag_name/-/\~}-${pkgrel}-arch"
     -Dmode=release
 
-    -Dsbat-distro='arch'
-    -Dsbat-distro-summary='Arch POWER'
-    -Dsbat-distro-pkgname="${pkgname}"
-    -Dsbat-distro-version="${pkgver}"
-    -Dsbat-distro-url="https://archlinuxpower.org"
-
-    -Dgnu-efi=${EFI}
     -Dima=false
     -Dlibidn2=true
     -Dlz4=true
@@ -155,9 +135,32 @@ build() {
     -Drpmmacrosdir=no
     -Dsysvinit-path=
     -Dsysvrcnd-path=
+
+    -Dsbat-distro='archpower'
+    -Dsbat-distro-summary='Arch POWER'
+    -Dsbat-distro-pkgname="${pkgname}"
+    -Dsbat-distro-version="${pkgver}"
+    -Dsbat-distro-url="https://archlinuxpower.org"
   )
 
-  [ "${CARCH}" == 'powerpc' ] && _meson_options+=(-Dtests=false)
+  case "${CARCH}" in
+    x86_64)
+      _meson_options+=(
+        -Dgnu-efi=true
+      )
+      ;;
+    powerpc)
+      _meson_options+=(
+        -Dgnu-efi=false
+        -Dtests=false
+      )
+      ;;
+    powerpc64le|riscv64)
+      _meson_options+=(
+        -Dgnu-efi=false
+      )
+      ;;
+  esac
 
   arch-meson "$pkgbase-stable" build "${_meson_options[@]}"
 
@@ -178,6 +181,7 @@ package_systemd() {
            'libelf' 'libseccomp' 'libseccomp.so' 'util-linux' 'libblkid.so'
            'libmount.so' 'xz' 'pcre2' 'audit' 'libaudit.so' 'libp11-kit'
            'libp11-kit.so' 'openssl')
+  depends_x86_64=('tpm2-tss')
   provides=('nss-myhostname' "systemd-tools=$pkgver" "udev=$pkgver")
   replaces=('nss-myhostname' 'systemd-tools' 'udev')
   conflicts=('nss-myhostname' 'systemd-tools' 'udev')
@@ -228,9 +232,6 @@ package_systemd() {
   rm "$pkgdir"/usr/share/factory/etc/{issue,nsswitch.conf}
   sed -i -e '/^C \/etc\/nsswitch\.conf/d' \
     -e '/^C \/etc\/issue/d' "$pkgdir"/usr/lib/tmpfiles.d/etc.conf
-
-  # add back tmpfiles.d/legacy.conf, normally omitted without sysv-compat
-  install -m0644 $pkgbase-stable/tmpfiles.d/legacy.conf "$pkgdir"/usr/lib/tmpfiles.d
 
   # ship default policy to leave services disabled
   echo 'disable *' >"$pkgdir"/usr/lib/systemd/system-preset/99-default.preset
@@ -304,4 +305,3 @@ package_systemd-sysvcompat() {
 }
 
 # vim:ft=sh syn=sh et sw=2:
-
