--- a/alsa-ucm-conf/PKGBUILD
+++ b/alsa-ucm-conf/PKGBUILD
@@ -3,23 +3,23 @@
 # Contributor: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
 
 pkgname=alsa-ucm-conf
-pkgver=1.2.5.1
+pkgver=1.2.6.3
 pkgrel=1
 pkgdesc="ALSA Use Case Manager configuration (and topologies)"
+arch=(any)
 url="https://alsa-project.org/"
-arch=('any')
-license=('BSD')
+license=(BSD)
 source=("https://www.alsa-project.org/files/pub/lib/${pkgname}-${pkgver}.tar.bz2"{,.sig})
-sha512sums=('774d6da1a0ee6fb1fcd764c1d4b3eb5812a35508cf27db71f6c82784f125eca207992da9081d25783fecb31e548d8b34124d4b3b3d506e33215b76ea48f71012'
+sha512sums=('14031173dd9b44c506f13172fcf89d1119e4b2d409a749ec8ef4948e75231a5e5091206e826dff9e70f1f803de8cfb9fd94886ef70764c705f65c1c7ebdf649f'
             'SKIP')
-b2sums=('317bcb8e866a68fe467047c67bd15fc88dc1e745e9bbe05f7b091ea1febdac6bd0fd512c2ce410970eb2593c0f8500c28c8405098de2bc56e1438e5b33b00d4a'
+b2sums=('c14e50f2bcf95fbc038d3b2b5801850d4d22ab041fdb57dd9f4b161a748326671687585279801a9d3f803abd3d253d86b6b3e891e8c3024c5641f8a24ccccbb7'
         'SKIP')
 validpgpkeys=('F04DF50737AC1A884C4B3D718380596DA6E59C91') # ALSA Release Team (Package Signing Key v1) <release@alsa-project.org>
 
 package() {
   cd "${pkgname}-${pkgver}"
-  find ucm2 -type f -iname "*.conf" -exec install -vDm 644 {} "${pkgdir}/usr/share/alsa/"{} \;
-  find ucm2 -type l -iname "*.conf" -exec cp -dv {} "${pkgdir}/usr/share/alsa/"{} \;
+  install -vdm 755 "${pkgdir}/usr/share/alsa/"
+  cp -av ucm2 "${pkgdir}/usr/share/alsa/"
   install -vDm 644 LICENSE -t "$pkgdir/usr/share/licenses/$pkgname"
   install -vDm 644 README.md -t "$pkgdir/usr/share/doc/$pkgname"
   install -vDm 644 ucm2/README.md -t "$pkgdir/usr/share/doc/$pkgname/ucm2"
