--- a/xorg/imake/PKGBUILD
+++ b/xorg/imake/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=imake
 pkgver=1.0.8
 pkgrel=3
 pkgdesc="X.Org imake program and related utilities"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('glibc')
