--- a/xorg/xorg-font-util/PKGBUILD
+++ b/xorg/xorg-font-util/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.3.2
 pkgrel=2
 pkgdesc='X.Org font utilities'
 url='https://xorg.freedesktop.org/'
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('custom')
 makedepends=('xorg-util-macros')
 validpgpkeys=('4A193C06D35E7C670FA4EF0BA2FB9E081F2D130E')
