--- a/xorg/libfontenc/PKGBUILD
+++ b/xorg/libfontenc/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=libfontenc
 pkgver=1.1.4
 pkgrel=3
 pkgdesc="X11 font encoding library"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('zlib' 'xorg-fonts-encodings')
