--- a/xorg/libxfont2/PKGBUILD
+++ b/xorg/libxfont2/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=libxfont2
 pkgver=2.0.5
 pkgrel=1
 pkgdesc="X11 font rasterisation library"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('freetype2' 'libfontenc')
