--- a/xorg/libxres/PKGBUILD
+++ b/xorg/libxres/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=libxres
 pkgver=1.2.1
 pkgrel=1
 pkgdesc="X11 Resource extension library"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org"
 license=('custom')
 depends=('libxext')
