--- a/xorg/xorg-server/PKGBUILD
+++ b/xorg/xorg-server/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=('xorg-server' 'xorg-server-xephyr' 'xorg-server-xvfb' 'xorg-server-xnes
          'xorg-server-common' 'xorg-server-devel')
 pkgver=1.20.13
 pkgrel=2
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('custom')
 groups=('xorg')
 url="https://xorg.freedesktop.org"
