--- a/xorg/xf86-input-evdev/PKGBUILD
+++ b/xorg/xf86-input-evdev/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xf86-input-evdev
 pkgver=2.10.6
 pkgrel=2
 pkgdesc="X.org evdev input driver"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('systemd-libs' 'mtdev' 'libevdev')
