--- a/xorg/xf86-video-fbdev/PKGBUILD
+++ b/xorg/xf86-video-fbdev/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xf86-video-fbdev
 pkgver=0.5.0
 pkgrel=2
 pkgdesc="X.org framebuffer video driver"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('custom')
 url="https://xorg.freedesktop.org/"
 depends=('glibc')
