--- a/xorg/xf86-video-amdgpu/PKGBUILD
+++ b/xorg/xf86-video-amdgpu/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xf86-video-amdgpu
 pkgver=21.0.0
 pkgrel=1
 pkgdesc="X.org amdgpu video driver"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('systemd-libs' 'mesa')
