--- a/xorg/xf86-video-ast/PKGBUILD
+++ b/xorg/xf86-video-ast/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=1.1.5
 pkgrel=2
 epoch=1
 pkgdesc="X.org ast video driver"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('systemd-libs' 'mesa')
