--- a/xorg/luit/PKGBUILD
+++ b/xorg/luit/PKGBUILD
@@ -6,7 +6,8 @@ pkgname=luit
 pkgver=20210218
 pkgrel=1
 pkgdesc="Filter that can be run between an arbitrary application and a UTF-8 terminal emulator"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(riscv64)
 url="https://invisible-island.net/luit/luit.html"
 license=('custom')
 depends=('libfontenc')
