--- a/xorg/xorg-appres/PKGBUILD
+++ b/xorg/xorg-appres/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xorg-appres
 pkgver=1.0.5
 pkgrel=2
 pkgdesc="List X application resource database"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libxt')
