--- a/xorg/xorg-bdftopcf/PKGBUILD
+++ b/xorg/xorg-bdftopcf/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-bdftopcf
 pkgver=1.1
 pkgrel=2
 pkgdesc="Convert X font from Bitmap Distribution Format to Portable Compiled Format"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('glibc')
