--- a/xorg/xorg-mkfontscale/PKGBUILD
+++ b/xorg/xorg-mkfontscale/PKGBUILD
@@ -6,7 +6,8 @@ pkgname=xorg-mkfontscale
 pkgver=1.2.1
 pkgrel=2
 pkgdesc="Create an index of scalable font files for X"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 install=xorg-mkfontscale.install
