--- a/mkinitcpio/PKGBUILD
+++ b/mkinitcpio/PKGBUILD
@@ -4,35 +4,36 @@
 # Maintainer: Thomas Bächler <thomas@archlinux.org>
 
 pkgname=mkinitcpio
-pkgver=29
-pkgrel=6
+pkgver=31
+pkgrel=2
 pkgdesc="Modular initramfs image creation utility"
 arch=('any')
-url="https://projects.archlinux.org/mkinitcpio.git/"
+url='https://github.com/archlinux/mkinitcpio'
 license=('GPL')
 depends=('awk' 'mkinitcpio-busybox>=1.19.4-2' 'kmod' 'util-linux>=2.23' 'libarchive' 'coreutils'
-         'bash' 'diffutils' 'findutils' 'grep' 'filesystem>=2011.10-1' 'gzip' 'systemd' 'binutils')
-optdepends=('xz: Use lzma or xz compression for the initramfs image'
+         'bash' 'binutils' 'diffutils' 'findutils' 'grep' 'filesystem>=2011.10-1' 'zstd' 'systemd')
+makedepends=('asciidoc')
+optdepends=('gzip: Use gzip compression for the initramfs image'
+            'xz: Use lzma or xz compression for the initramfs image'
             'bzip2: Use bzip2 compression for the initramfs image'
             'lzop: Use lzo compression for the initramfs image'
             'lz4: Use lz4 compression for the initramfs image'
             'mkinitcpio-nfs-utils: Support for root filesystem on NFS')
-makedepends=('asciidoc')
 provides=('initramfs')
 backup=('etc/mkinitcpio.conf')
 source=("https://sources.archlinux.org/other/$pkgname/$pkgname-$pkgver.tar.gz"{,.sig}
-        "mkinitcpio-powerpc-support.patch")
+	mkinitcpio-powerpc-support.patch)
 install=mkinitcpio.install
-sha512sums=('cc03159f16ae12a0d1ebf6a1827f8cdaf73ad0910bf2b1b0f30b737b1cff472130eb41c3669c180291a9861c3c3167498d1f9d60cb9782aeb1ef1d0cd2156068'
+sha512sums=('4ef87c2e4f579b292c38f9c487e78b3b99f6db77909cab322e860e5ca70aca3747fcfc272e2e15c9a3605c924ab178057b8b23151f98debc5d96e65f3c0c49d5'
             'SKIP'
             'd822b8a0171e927a053241ac29fb36040caa4c944389d4b8a4f67af1351cad631daffa1cf1a00561c2b2efb491d30ec7e9379cb2cfef34dbc68422c74e782967')
-validpgpkeys=('487EACC08557AD082088DABA1EB2638FF56C0C53'   # Dave Reisner
-              '86CFFCA918CF3AF47147588051E8B148A9999C34'   # Evangelos Foutras
-              'ECCAC84C1BA08A6CC8E63FBBF22FB1D78A77AEAB')  # Giancarlo Razzolini
+b2sums=('0113e288906e3b5fa485c29c00e7df60d85addd96718c45531031a686f18c739fa18303b6cac374d35b85edb7b663e221c8dc9158dff08c75858a4ed4dd154bf'
+        'SKIP'
+        '56f784c5f4bc0d6d6503b9e158a724999c9c97dd1359f417b45fc17daa8fd38b4aebaa8b8eab930ad9bb720641a1e7ad5c0a37786e9494ddbd771065f15d0a4e')
+validpgpkeys=('ECCAC84C1BA08A6CC8E63FBBF22FB1D78A77AEAB')    # Giancarlo Razzolini
 
 prepare() {
   cd $pkgname-$pkgver
-  # powerpc support
   patch -Np1 -i ${srcdir}/mkinitcpio-powerpc-support.patch
 }
 
@@ -43,4 +44,3 @@ check() {
 package() {
   make -C "$pkgname-$pkgver" DESTDIR="$pkgdir" install
 }
-
