--- a/vala/PKGBUILD
+++ b/vala/PKGBUILD
@@ -5,47 +5,47 @@
 # Contributor: Timm Preetz <timm@preetz.us>
 
 pkgname=vala
-pkgver=0.54.3
+pkgver=0.54.6
 pkgrel=1
 pkgdesc='Compiler for the GObject type system'
 url='https://wiki.gnome.org/Projects/Vala'
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(LGPL)
-depends=(glib2 gtk-doc ttf-font pkg-config gcc)
+depends=(glib2 gtk-doc graphviz ttf-font pkg-config gcc)
 makedepends=(libxslt vala git help2man autoconf-archive)
 checkdepends=(dbus libx11 gobject-introspection)
 provides=(valadoc libvala-${pkgver%.*}.so libvaladoc-${pkgver%.*}.so)
 conflicts=(valadoc)
 replaces=(valadoc)
-_commit=833f8fc4affbccd82125660a4b2b84f7d2685f97  # tags/0.54.3^0
+_commit=9fa627b36ca7828c0d7893e6f5eaf48ea9b02757  # tags/0.54.6^0
 source=("git+https://gitlab.gnome.org/GNOME/vala.git#commit=$_commit")
 sha256sums=('SKIP')
 
 pkgver() {
-  cd $pkgname
-  git describe --tags | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
+  cd vala
+  git describe --tags | sed 's/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
-  cd $pkgname
+  cd vala
   NOCONFIGURE=1 ./autogen.sh
 }
 
 build() {
-  cd $pkgname
-  ./configure --prefix=/usr --disable-valadoc
+  cd vala
+  ./configure --prefix=/usr
   sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
   make
 }
 
 check() {
-  cd $pkgname
+  cd vala
   make check
 }
 
 package() {
-  cd $pkgname
+  cd vala
   make DESTDIR="$pkgdir" install
 }
 
-# vim: ts=2 sw=2 et:
+# vim:set sw=2 et:
