--- a/glib2/PKGBUILD
+++ b/glib2/PKGBUILD
@@ -4,14 +4,14 @@
 
 pkgbase=glib2
 pkgname=(glib2 glib2-docs)
-pkgver=2.70.1
-pkgrel=1
+pkgver=2.70.2
+pkgrel=2
 pkgdesc="Low level core library"
 url="https://wiki.gnome.org/Projects/GLib"
 license=(LGPL)
 arch=(x86_64 powerpc64le powerpc riscv64)
-depends=(pcre libffi util-linux-libs zlib)
-makedepends=(gettext python libelf git util-linux
+depends=(pcre libffi util-linux-libs zlib libsysprof-capture)
+makedepends=(gettext gtk-doc shared-mime-info python libelf git util-linux
              meson dbus)
 checkdepends=(desktop-file-utils)
 source=("git+https://gitlab.gnome.org/GNOME/glib.git?signed#tag=$pkgver"
@@ -37,6 +37,7 @@ build() {
     -D glib_debug=disabled \
     -D selinux=disabled \
     -D man=true \
+    -D sysprof=enabled \
     -D gtk_doc=true
   meson compile -C build
 }
