--- a/libbsd/PKGBUILD
+++ b/libbsd/PKGBUILD
@@ -7,7 +7,8 @@ pkgname=libbsd
 pkgver=0.11.3
 pkgrel=1
 pkgdesc='Provides useful functions commonly found on BSD systems like strlcpy()'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(riscv64)
 url="https://libbsd.freedesktop.org"
 license=('custom')
 depends=('glibc' 'libmd')
