--- a/talloc/PKGBUILD
+++ b/talloc/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=talloc
 pkgver=2.3.3
-pkgrel=1
+pkgrel=3
 pkgdesc="Hierarchical pool based memory allocator with destructors"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL3')
 url="https://talloc.samba.org/"
 depends=('glibc' 'libxcrypt')
