--- a/tevent/PKGBUILD
+++ b/tevent/PKGBUILD
@@ -7,11 +7,11 @@
 
 pkgname=tevent
 pkgver=0.11.0
-pkgrel=1
+pkgrel=3
 epoch=1
 pkgdesc='Event system based on the talloc memory management library'
 url="https://tevent.samba.org/"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 source=(https://samba.org/ftp/tevent/${pkgname}-${pkgver}.tar{.gz,.asc})
 license=('GPL3')
 depends=('talloc')
