--- a/liburing/PKGBUILD
+++ b/liburing/PKGBUILD
@@ -7,6 +7,7 @@ pkgver=2.1
 pkgrel=1
 pkgdesc="Linux-native io_uring I/O access library"
 arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 url="https://git.kernel.dk/cgit/liburing/"
 license=('LGPL2.1' 'MIT')
 depends=('glibc')
