--- a/samba/PKGBUILD
+++ b/samba/PKGBUILD
@@ -11,9 +11,9 @@
 
 pkgbase=samba
 pkgname=('smbclient' 'samba')
-pkgver=4.15.0
+pkgver=4.15.3
 pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.samba.org"
 license=('GPL3')
 makedepends=('python' 'python-markdown' 'python-dnspython' 'docbook-xsl' 'pkg-config' 'libbsd' 'db' 'popt' 'libcups'
@@ -206,3 +206,8 @@ sys.path.insert(0, '/usr/lib/python${_pyver}/site-packages')" \
 }
 
 # vim: ts=2 sw=2 et:
+sha512sums=('1c30cfa6cd927f4d822dd7227b89542d05d7ab4e50c2d9717eea4fcf1af5120b55d66ec628acd5c887e9bffc732c1d37ab084db953534a2b3987531b10fef63c'
+            'SKIP'
+            '2ba0691ded467e4d6e40821f6de58c00f8962209efe2e60284c0c87756ab471c22c3d63b77d506e48c90ed0d852a2a24e41be1d499cf74a73cb99da0b503c858'
+            '1e6183ab0eb812b3ef687ac2c26ce78f7cb30540f606d20023669ac00ba04075487fb72e4dc89cc05dab0269ff6aca98fc1167cc75669c225b88b592482fbf67'
+            'e46ee848baabb261e7468ecee43aba4d001a24f86f5322ae522abdb75030fd0ebd9063b9df0be3576c4d1654d81331f5e389aee16ec2fa138259ae4728e94efc')
