--- a/double-conversion/PKGBUILD
+++ b/double-conversion/PKGBUILD
@@ -1,36 +1,30 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Anatol Pomozov <anatol.pomozov@gmail.com>
+# Maintainer: Antonio Rojas <arojas@archlinux.org>
+# Contributor: Anatol Pomozov <anatol.pomozov@gmail.com>
 # Contributor: Joel Teichroeb <joel@teichroeb.net>
 # Contributor: Jonas Heinrich <onny@project-insanity.org>
 
 pkgname=double-conversion
-pkgver=3.1.5
-pkgrel=2
+pkgver=3.2.0
+pkgrel=1
 pkgdesc='Binary-decimal and decimal-binary routines for IEEE doubles'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/google/double-conversion'
 license=(BSD)
 depends=(gcc-libs)
 makedepends=(cmake)
-source=(double-conversion-$pkgver.tar.gz::https://github.com/google/double-conversion/archive/v$pkgver.tar.gz)
-sha256sums=('a63ecb93182134ba4293fd5f22d6e08ca417caafa244afaa751cbfddf6415b13')
-
-prepare() {
-  mkdir -p build
-}
+source=(https://github.com/google/double-conversion/archive/v$pkgver/$pkgname-$pkgver.tar.gz)
+sha256sums=('3dbcdf186ad092a8b71228a5962009b5c96abde9a315257a3452eb988414ea3b')
 
 build() {
-  cd build
-  cmake ../$pkgname-$pkgver \
+  cmake -B build -S $pkgname-$pkgver \
       -DCMAKE_INSTALL_PREFIX=/usr \
-      -DCMAKE_INSTALL_LIBDIR=lib \
       -DBUILD_SHARED_LIBS=ON
-  make
+  cmake --build build
 }
 
 package () {
-  cd build
-  make DESTDIR="$pkgdir" install
+  DESTDIR="$pkgdir" cmake --install build
 
-  install -Dm644 "$srcdir"/$pkgname-$pkgver/LICENSE -t "$pkgdir"/usr/share/licenses/double-conversion
+  install -Dm644 $pkgname-$pkgver/LICENSE -t "$pkgdir"/usr/share/licenses/$pkgname
 }
