--- a/avahi/PKGBUILD
+++ b/avahi/PKGBUILD
@@ -5,13 +5,13 @@
 
 pkgname=avahi
 pkgver=0.8+22+gfd482a7
-pkgrel=1
+pkgrel=3
 pkgdesc='Service Discovery for Linux using mDNS/DNS-SD -- compatible with Bonjour'
 url='https://github.com/lathiat/avahi'
 license=(LGPL)
 arch=(x86_64 powerpc64le powerpc riscv64)
 depends=(expat libdaemon glib2 libcap gdbm dbus)
-makedepends=(git gobject-introspection gtk3 xmltoman dbus-python
+makedepends=(git gobject-introspection gtk3 qt5-base xmltoman python-dbus
              python-gobject doxygen graphviz libevent)
 optdepends=('gtk3: avahi-discover, avahi-discover-standalone, bshell, bssh, bvnc'
             'qt5-base: qt5 bindings'
@@ -67,8 +67,7 @@ build() {
     --with-avahi-priv-access-group=network \
     --with-autoipd-user=avahi \
     --with-autoipd-group=avahi \
-    --with-systemdsystemunitdir=/usr/lib/systemd/system \
-    --disable-qt5
+    --with-systemdsystemunitdir=/usr/lib/systemd/system
   sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
 
   make
