--- a/python/python-scipy/PKGBUILD
+++ b/python/python-scipy/PKGBUILD
@@ -9,22 +9,28 @@
 
 _name=scipy
 pkgname=python-scipy
-pkgver=1.7.1
-pkgrel=1
+pkgver=1.7.3
+pkgrel=3
 pkgdesc='Open-source software for mathematics, science, and engineering'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.scipy.org/'
 license=(BSD)
 depends=(python-numpy)
 provides=(scipy)
-makedepends=(gcc-fortran python-setuptools cython python-pythran pybind11)
+makedepends=(gcc-fortran python-setuptools cython pybind11)
 checkdepends=(python-pytest)
 optdepends=('python-pillow: for image saving module')
 source=(https://pypi.python.org/packages/source/${_name:0:1}/$_name/$_name-$pkgver.tar.gz)
-sha256sums=('6b47d5fa7ea651054362561a28b1ccc8da9368a39514c1bbf6c0977a1c376764')
+sha256sums=('ab5875facfdef77e0a47d5fd39ea178b58e60e454a4c85aa1e52fcb80db7babf')
 
 build() {
   cd scipy-${pkgver}
+
+
+  curl -o get-pip.py https://bootstrap.pypa.io/get-pip.py
+  sudo python get-pip.py
+  sudo pip install pythran
+
   python setup.py config_fc build
 }
 
@@ -32,7 +38,7 @@ check() {
   cd scipy-${pkgver}
   python setup.py config_fc install \
     --prefix=/usr --root="$srcdir"/test --optimize=1
-  export PYTHONPATH="$srcdir"/test/usr/lib/python3.9/site-packages
+  export PYTHONPATH="$srcdir"/test/usr/lib/python3.10/site-packages
   cd ..
   python -c "from scipy import test; test('full')"
 }
