--- a/tracker3/PKGBUILD
+++ b/tracker3/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Alexander Fehr <pizzapunk gmail com>
 
 pkgbase=tracker3
-pkgname=(tracker3)
+pkgname=(tracker3 tracker3-docs)
 pkgver=3.2.1
 pkgrel=2
 pkgdesc="Desktop-neutral user information store, search tool and indexer"
@@ -13,7 +13,7 @@ arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL)
 depends=(sqlite icu glib2 libffi util-linux libstemmer libseccomp json-glib
          libsoup3)
-makedepends=(gobject-introspection vala git bash-completion meson
+makedepends=(gobject-introspection vala git hotdoc bash-completion meson
              asciidoc systemd libsoup python-gobject python-dbus python-tappy)
 _commit=bcf1347a9eea300d11c95a78f8f74f38131bb560  # tags/3.2.1^0
 source=("git+https://gitlab.gnome.org/GNOME/tracker.git#commit=$_commit")
@@ -29,7 +29,7 @@ prepare() {
 }
 
 build() {
-  arch-meson tracker build -D tests_tap_protocol=true -D docs=false
+  arch-meson tracker build -D tests_tap_protocol=true
   meson compile -C build
 }
 
@@ -52,6 +52,15 @@ package_tracker3() {
   provides=(libtracker-sparql-3.0.so)
 
   meson install -C build --destdir "$pkgdir"
+
+  cd "$pkgdir"
+  _pick docs usr/share/{devhelp,doc}
+}
+
+package_tracker3-docs() {
+  pkgdesc+=" (documentation)"
+  depends=()
+  mv docs/* "$pkgdir"
 }
 
 # vim:set sw=2 et:
