--- a/xfsprogs/PKGBUILD
+++ b/xfsprogs/PKGBUILD
@@ -1,13 +1,13 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer : Tobias Powalowski <tpowa@archlinux.org>
 pkgname=xfsprogs
-pkgver=5.13.0
+pkgver=5.14.2
 pkgrel=1
 pkgdesc="XFS filesystem utilities"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('LGPL')
 url="https://xfs.org"
-depends=('sh' 'util-linux-libs' 'icu' 'device-mapper' 'libinih')
+depends=('sh' 'util-linux-libs' 'icu' 'device-mapper' 'libinih' 'liburcu')
 optdepends=('python: for xfs_scrub_all script'
             'smtp-forwarder: for xfs_scrub_fail script')
 makedepends=('git')
