--- a/cppunit/PKGBUILD
+++ b/cppunit/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=cppunit
 pkgver=1.15.1
-pkgrel=2
+pkgrel=2.1
 pkgdesc="A C++ unit testing framework"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.freedesktop.org/wiki/Software/cppunit"
 license=('LGPL')
 depends=('sh' 'gcc-libs')
