--- a/libplist/PKGBUILD
+++ b/libplist/PKGBUILD
@@ -5,10 +5,10 @@
 
 pkgname=libplist
 pkgver=2.2.0
-pkgrel=3
+pkgrel=5
 pkgdesc="A library to handle Apple Property List format whereas it's binary or XML"
 url="https://libimobiledevice.org/"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2' 'LGPL2.1')
 depends=('glib2')
 makedepends=('python' 'cython' 'autoconf-archive' 'git' 'python-setuptools')
