--- a/benchmark/PKGBUILD
+++ b/benchmark/PKGBUILD
@@ -3,17 +3,17 @@
 # Contributor: Philipp Claßen <philipp.classen@posteo.de>
 
 pkgname=benchmark
-pkgver=1.5.6
+pkgver=1.6.1
 pkgrel=1
 pkgdesc="A microbenchmark support library"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/google/benchmark"
 license=('Apache')
 depends=('gcc-libs')
 makedepends=('cmake')
 
 source=("https://github.com/google/$pkgname/archive/v$pkgver/$pkgname-$pkgver.tar.gz")
-sha256sums=('789f85b4810d13ff803834ea75999e41b326405d83d6a538baf01499eda96102')
+sha256sums=('6132883bc8c9b0df5375b16ab520fac1a85dc9e4cf5be59480448ece74b278d4')
 
 prepare() {
   cd "$srcdir/$pkgname-$pkgver"
