--- a/snappy/PKGBUILD
+++ b/snappy/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=snappy
 pkgver=1.1.9
 pkgrel=2
 pkgdesc='A fast compressor/decompressor library'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://google.github.io/snappy/"
 license=('BSD')
 depends=('glibc' 'gcc-libs')
